# spelling_bee

./: .clang-format  extra_cred.h  helpers.c  main.c  makefile  print_utils.h  puzzle_state.c  puzzle_state.h  score.c  score.h  spellingBee  struct.c  struct.h  utils.c  utils.h
backend/: CMakeLists.txt
backend/.cache/clangd/index/: cJSON.c.03C684578559AAF7.idx  cJSON.h.91598B624EEECA92.idx  cJson.c.4F320778CEE4677D.idx  extra_cred.c.2E65905D12A5C031.idx  extra_cred.h.388BD9FFAB0D0F4D.idx  helpers.c.6BD1BFD23CC49DE6.idx  helpers.h.3627C8663C0D9961.idx  main.c.AF3BB8F5982B1D07.idx  print_utils.c.C5D8C1F1F25F53B2.idx  print_utils.h.EE4020ABD0E5C798.idx  puzzle_state.c.E97C9098457037A6.idx  puzzle_state.h.8A166EB4E28C0D75.idx
backend/data/: sampleIn.txt
backend/include/: puzzle_state.h
backend/src/: cJSON.c  extra_cred.c  main.c  print_utils.c  puzzle_state.c  response_layout.json  server.c
data/: sampleIn.txt
frontend/: package-lock.json
frontend/src/: app.js  index.html  style.css
spellB_debug.exe.dSYM/Contents/: Info.plist
spellB_debug.exe.dSYM/Contents/Resources/Relocations/aarch64/: spellB_debug.exe.yml
spellingBee.dSYM/Contents/: Info.plist
spellingBee.dSYM/Contents/Resources/DWARF/: spellingBee
spellingBee.dSYM/Contents/Resources/Relocations/aarch64/: spellingBee.yml
src/: extra_cred.c  helpers.c  helpers.h  main.c  print_utils.c
